tt-rss.css
/* ... */
div#hotkey_help_overlay table.hho td.top,
div#hotkey_help_overlay table.hho td.bottom {
	text-align : center;
	font-size : 11px;
}

div#l_progress_o {
	width : 200px;
	border : 1px solid black;
	background-color : white;
	margin-top : 10px;
}

div#l_progress_i {
	width : 10px;
	background-color : #88b0f0;
	height : 10px;
}

div.dlgSec {
	font-size : 12px;
	color : gray;
	font-weight : bold;
	clear : both;
	height : 20px;
}

div.dlgSecCont {
	position : relative;
	left : 150px;
	top : -20px;
	float : left;
	font-size : 12px;
	font-weight : normal;
}

div.dlgSecCont hr {
	height : 0px;
	line-height : 0px;
	border : 0px solid transparent;
	margin : 2px;
}

div.dlgSecCont > * {
	position : relative;
	top : -2px;
}

div.dlgButtons {
	text-align : right;
	clear : both;
}

span.labelColorIndicator {
	height : 14px;
	width : 14px;
	line-height : 14px;
	font-height : 9px;
	display : inline-block;
	border : 1px solid black;
	background-color : #fff7d5;	
	color : #063064;
	text-align : center;
	margin-right : 2px;
}

span.labelColorIndicator2 {
	height : 14px;
	width : 14px;
	font-height : 9px;
	display : inline-block;
	border : 1px solid black;
	background-color : #fff7d5;	
	color : #063064;
	text-align : center;
	margin-right : 2px;
	vertical-align : bottom;
}


div.labelColorIndicator {
	height : 14px;
	width : 14px;
	line-height : 14px;
	font-height : 9px;
	text-align : center;
	border : 1px solid black;
	float : left;
	background-color : #fff7d5;	
	color : #063064;
	margin-right : 10px;
}

optgroup {
	color : #4684ff;
	font-style : normal;
}

option {
	color : black;
}

div#cmdline {
	position : absolute;
	left : 5px;
	bottom : 5px;
	font-size : 11px;
	color : gray;
	font-weight : bold;
	background-color : white;
	border : 1px solid #88b0f0;
	padding : 3px 5px 3px 5px;
	z-index : 5;
}

#feed_browser_spinner {
	vertical-align : middle;
	height : 18px;
	width : 18px;
}

div#auxDlg {
	position : absolute;
	z-index : 3;
	bottom : 5px;
	right : 25px;
	padding : 5px;
	border-width : 1px;
	border-style : solid;
	border-color : #d7c47a;
	background-color : #fff7d5;
	color : black;
	text-align : center;
	font-size : 13px;
}

div#auxDlg a {
	color : #4684ff;
}

div.hlTitle {
	display : table-cell;
	cursor : pointer;
	width : 100%;
	vertical-align : middle;
	padding-top : 4px;
	padding-bottom : 4px;
}

div.hlLeft {
	display : table-cell;
	vertical-align : middle;
	white-space: nowrap;
}

div.hlRight {
	display : table-cell;
	white-space: nowrap;
	text-align : right;
	vertical-align : middle;
}

div.hlRight img {
	max-width : 16px;
	max-height : 16px;
}

span.hlUpdated {
	color : gray;
	font-weight : medium;
	width : 100px;
	display : inline-block;
}

div.hlLeft input {
	margin-left : 4px;
	margin-right : 4px;
}

div.hlLeft img, div.hlRight img {
	margin : 0px 4px 0px 4px;

}

div.hlUpdPic {
	display : table-cell;
	padding-right : 4px;
	padding-left : 4px;
	text-align : center;
	vertical-align : middle;
}

div.hlUpdPic img {
	max-width : 16px;
}

div.fatalError {
	margin-bottom : 10px;
}

div.fatalError button {
	margin-top : 5px;
}

div.fatalError textarea {
	width : 100%;
	height : 100px;
}

#main {
	border-width : 0px;
	margin : 0px;
	padding : 0px;
}

#header-wrap {
	border-width : 0px;
	margin : 0px;
	padding : 0px;
}

#content-wrap {
	padding : 0px;
	border-width : 0px;
	margin : 0px;
}

#feeds-holder {
	padding : 0px;
	border-color : #88b0f0;
	border-left-width : 0px;
	border-bottom-width : 0px;
	border-top-width : 0px;
}

#headlines-wrap-inner {
	padding : 0px;
	margin : 0px;
	border-width : 0px;
}

#headlines-frame {
	padding : 0px;
	border-color : #88b0f0;
	border-left-width : 0px;
	border-right-width : 0px;
	margin-top : 0px;
	border-top-width : 0px;
}

#headlines-toolbar_splitter, #toolbar_splitter {
	display : none;
}

#content-tabs {
	margin : 0px;
	padding : 0px;
	border-width : 0px;
}

#toolbar {
	padding : 0px;
	margin : 0px;
	border-width : 0px;
	white-space: nowrap;
	font-size : 12px;
}

#header {
	border-width : 0px;
	text-align : right;
	color : gray;
	padding : 5px 5px 0px 0px;
	margin : 0px;
	position : absolute;
	right : 0px;
	top : 0px;
	z-index : 5;
}

#footer {
	text-align : center;
	color : gray;
	padding : 4px 4px 8px 4px;
	border-width : 0px;
}

#content-insert {
	padding : 0px;
	border-color : #88b0f0;
	border-bottom-width : 0px;
	border-right-width : 0px;
	border-left-width : 0px;
}

.dijitTreeLabel.Unread {
	font-weight : bold;
}

.feedParam {
	color : gray;
	float : right;
	margin-right : 1em;
}

.dijitTreeLabel.Disabled, .labelParam.Disabled {
	color : gray;
}

.dijitTreeRow.Error {
	color : red;
}

.dijitTreeRow.Hidden {
	display : none;
}

img.feedIcon, img.tinyFeedIcon {
	width : 16px;
	height : 16px;
}

div#feedlistLoading, div#filterlistLoading, div#labellistLoading {
	text-align : center;
	padding : 5px;
	color : gray;
}

div#feedlistLoading img, div#filterlistLoading img, div#labellistLoading {
	margin-right : 5px;
}

div#pref-tabs .dijitContentPane {
	font-size : 12px;
}

div#pref-tabs {
	margin : 0px 5px 0px 5px;
}

div#pref-tabs .dijitContentPane h3 {
	font-size : 14px;
	font-weight : bold;
}

#pref-filter-wrap, #pref-filter-header, #pref-filter-content, 
#pref-label-wrap, #pref-label-header, #pref-label-content,
#pref-user-wrap, #pref-user-header, #pref-user-content {
	margin : 0px;
	padding : 0px;
	border-width : 0px;
}

#userConfigTab, #labelConfigTab, #filterConfigTab, #pref-feeds-feeds { 
	padding : 0px;
}

#errorButton {
	color : red;
}

span.labelFixedLength {
	display : inline-block;
	width : 70%;
}

#filter_dlg_date_chk_box {
	display : inline-block;
}

.dijitDialog .dijitToolbar {
	border : 1px solid #c0c0c0;
}

a.bookmarklet {
	color : #4684ff;
	border : 1px solid #ecf4ff;
	padding : 2px;
}

#newVersionIcon {
	margin-left : 5px;
	vertical-align : middle;
	position : relative;
	top : -1px;
}
/* ... */

